# amazon-lite

./: README.md  api_models.dot  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: populate_db.py
api/migrations/: 0001_initial.py  0002_alter_product_id.py  0003_alter_orderitem_product.py  0004_alter_orderitem_order_alter_orderitem_product.py  0005_alter_orderitem_product.py  0006_alter_orderitem_product.py  0007_alter_orderitem_product.py  0008_rename_products_order_order_items_and_more.py  0009_rename_order_items_order_products_and_more.py  0010_alter_order_order_id_alter_order_status_and_more.py
config/: settings.py  urls.py
frontend-vue/: README.md  package-lock.json  package.json
frontend-vue/src/: App.vue  main.ts  types.ts
frontend-vue/src/components/: Face.vue
frontend-vue/src/services/: api.ts  orderService.ts  productsService.ts
